Post new and Post Edit, usando Formularios

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,6 +20,8 @@
             </h1>
             
             <p>Hola Soy un Nuevo parrafo del Blog</p>
+
+            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus">new</span></a>
         </header>
     </div>
     
