--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,6 +7,9 @@
         {% if post.published_date %}
             <p class="date">{{ post.published_date}}</p>
         {% endif %}
+
+        <a class="btn btn-default" href="{% url 'post_edit' postId=post.pk %}"><span class="glyphicon glyphicon-pencil">Edit</span></a>
+
         <!-- 'post_detail => es un view nuevo '-->
         <h1>Title: {{post.title}}</a></h1>
         <p>{{post.text|linebreaksbr}}</p>
