--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -4,9 +4,9 @@
 
     <h1>New Post</h1>
 
-    <form method="POST" class="post-form form-group">{% csrf_token %}
+    <form method="POST" class="form-group">{% csrf_token %}
         {{form.as_p}}
-        <button type="submit" class="save btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-primary">Save</button>
     </form>
 
 {% endblock %}
