--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,9 +25,16 @@
             
             <p>Hola Soy un Nuevo parrafo del Blog</p>
 
-            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus">New</span></a>
+            
             {% if user.is_authenticated %}
+            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus">New</span></a>
+
             <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit">Drafts</span></a>
+
+            <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+            {% else %}
+
+            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock">Login</span></a>
             {% endif %}
         </header>
     </div>
