--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,10 +10,12 @@
             <a class="btn btn-sucess" href="{% url 'post_publish' postId=post.id %}">Publish</a>
         {% endif %}
 
+        {% if user.is_authenticated %}
+
         <a class="btn btn-default" href="{% url 'post_edit' postId=post.pk %}"><span class="glyphicon glyphicon-pencil">Edit</span></a>
 
         <a class="btn btn-default" href="{% url 'post_remove' postId=post.pk %}"><span class="glyphicon glyphicon-remove">Remove</span></a>
-
+        {%  endif %}
         <!-- 'post_detail => es un view nuevo '-->
         <h1>Title: {{post.title}}</a></h1>
         <p>{{post.text|linebreaksbr}}</p>
